source/postcard-schema-ng/tests/snapshots/schema__postcard_snapshot_Slice.snap
---
source: source/postcard-schema-ng/tests/schema.rs
expression: "Slice :: SCHEMA"
---
Struct {
    name: "Slice",
    data: Struct(
        [
            NamedField {
                name: "x",
                ty: Seq(
                    U8,
                ),
            },
        ],
    ),
}
